@@ -1,5 +1,4 @@
 
-This is dvidvi 1.1 (TeX Live 2021), Copyright 1988-1991 Radical Eye Software
 Improved from 1.0 to 1.1, 1994, Markus Kohm
 play.dvi -> playout.dvi
 [5] [12] [9] [8] [13] 
